tests/error/09_undefined_var.py
# Undefined variable
# Referencing undefined variable "a"
print(a)
